# Flashcard-Scheduler

./: .gitignore  API-Specs.md  LICENSE  README.md
general-assignment-template/: README.md  manage.py  pyproject.toml  pytest.ini
general-assignment-template/assignment/: asgi.py  middleware.py  models.py  settings.py  urls.py  views.py  wsgi.py
general-assignment-template/assignment/management/commands/: init_data.py
general-assignment-template/assignment/migrations/: 0001_initial.py
general-assignment-template/assignment/tests/: test_user_me.py
general-assignment-template/scheduler/: config.py
general-assignment-template/scheduler/api/: serializers.py  urls.py  views.py
general-assignment-template/scheduler/data/: models.py  repos.py
general-assignment-template/scheduler/domain/: enums.py  logic.py
general-assignment-template/scheduler/migrations/: 0001_initial.py
general-assignment-template/scheduler/services/: reviews.py
general-assignment-template/scheduler/tests/: test_integration_server.py  test_scheduler.py
general-assignment-template/scheduler/utils/: time.py
